# infra_docker_containers

./: .gitignore  redis.yaml  run_dev_env  run_dev_env.sh
dev_env/: Dockerfile  LICENSE  README.md  bashrc  docker-compose.yaml  requirements.txt  setup_nvim.sh
dev_env/example_cpp_project/: CMakeLists.txt  Dockerfile  docker-compose.yaml
dev_env/example_cpp_project/.cache/clangd/index/: coruteine_test.cpp.C6DD37571A7110B5.idx  corutine_test.hpp.FE26A01DCBB5F4B1.idx  file_server.cpp.21345ED0CD0785BD.idx  file_server.hpp.3D864B4FFF427213.idx  main.cpp.92C15F872239E39B.idx
dev_env/example_cpp_project/include/: corutine_test.hpp
dev_env/example_cpp_project/src/: coruteine_test.cpp  main.cpp
file_downloading_server/: Dockerfile  docker-compose.yaml  requirements.txt
file_downloading_server/file_server/: __main__.py
redis/: Dockerfile  docker-compose.yaml  redis.conf
redis/working_dir/: dump.rdb
sql_server/: docker-compose.yaml
sql_server/example_tables/: countries-cities-currencies-install.sql
stm32/: Dockerfile  README.md  bashrc  docker-compose.yaml
stm32/example_cpp_project/: Dockerfile
stm32/example_cpp_project/libs/CMSIS/: CMakeLists.txt
stm32/example_cpp_project/linker/: STM32F103X6_FLASH.ld
stm32/example_cpp_project/src/: sysmem.c
stm32/ssh/: config
stm32_dev_env/: .bash_history  Dockerfile  docker-compose.yaml
stm32_dev_env/example_cpp_project/: CMakeLists.txt  Dockerfile  docker-compose.yaml
stm32_dev_env/example_cpp_project/.cache/clangd/index/: base_functions.cpp.32F829734E2D1F9B.idx  cmsis_compiler.h.4DDDE4FD653D44A3.idx  cmsis_compiler.h.8AD4B6C937866738.idx  cmsis_gcc.h.C53666A57CB0CB3F.idx  cmsis_gcc.h.E238BAF45B8B1357.idx  cmsis_version.h.3715212DF0A0BE3E.idx  cmsis_version.h.C2359FD0E1B12959.idx  core_cm3.h.0CCCDB2306EC237B.idx  core_cm3.h.E9D8F3CCB7523A06.idx  main.c.8D9FBF5505C88863.idx  main.cpp.92C15F872239E39B.idx  sample.cpp.9C316E4FEA711F76.idx  sample.hpp.0ABA4B3A0C53A219.idx  startup_stm32f103rbtx.s.1F51FC7C58BEE9C9.idx  startup_stm32f103rbtx.s.29CB6144B69F096D.idx  stm32f103x6.h.30468A801A9C5D47.idx  stm32f103x6.h.ADA5527F99560486.idx  stm32f103xb.h.C6E0E2EBF538EB6C.idx  stm32f1xx.h.1A78C45ED31E6922.idx  stm32f1xx.h.E8D2C1AD101867CF.idx  syscalls.c.203D36ACCB7187AA.idx  sysmem.c.9597127E268890B9.idx  system_stm32f1xx.c.0794C9E3D974A6F4.idx  system_stm32f1xx.c.CC560CF3EB1AEC29.idx  system_stm32f1xx.h.329AADADDEFE0231.idx  system_stm32f1xx.h.3AEAB39BB9E57B16.idx
stm32_dev_env/example_cpp_project/include/: base_functions.hpp
stm32_dev_env/example_cpp_project/src/: base_functions.cpp  main.cpp  syscalls.c
